<?xml version="1.0"?>
<package format="3">
  <name>rincon_republisher</name>
  <version>0.0.1</version>
  <description>Republisher action example</description>

  <maintainer email="amilcar.rincon.charris@gmail.com">Amilcar Rincon</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
